# mobius

./: .gitignore  README.md  metron_cache.db  pyproject.toml
src/: main.py  router.py
src/assets/metron-api/: metron-api-schema.yaml
src/pages/: discover_page.py  home_page.py  my_library_page.py  nav_bar.py  releases_page.py  search_page.py  search_results_page.py  series_page.py  settings_page.py
src/pages/components/: action_card.py  issue_card.py  list_manager.py  management_sheets.py  page_header.py  series_card.py  series_overview.py
src/services/: image_cache.py  metron_service.py
src/utilities/: formatters.py  utils.py
src/views/: discover_view.py  home_view.py  my_library_view.py  releases_view.py
src/views/sub_views/: search_view.py  settings_view.py
